// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio components Renders Radio properly 1`] = `
<div
  class="sc-dkPtRN WmCzP"
>
  Test
</div>
`;

exports[`Radio components Renders RadioContainer properly 1`] = `
<div
  class="sc-gsDKAQ kPfSor"
>
  Test
</div>
`;

exports[`Radio components Renders RadioDiv properly 1`] = `
<div
  class="sc-bdvvtL cEMgQm"
>
  Test
</div>
`;

exports[`Radio components Renders TextRadio properly 1`] = `
<label
  class="sc-hKwDye gCYIDt"
>
  Test
</label>
`;
